src/action/popup.css
:root {
  --black: 21, 20, 26;
  --white: 255, 255, 255;
  --accent: 0, 98, 249;
  --passive-grey: 240, 240, 244;
  --active-grey: 191, 191, 201;
  --search-highlight: 226, 247, 255;

  /* Acorn Tokens */
  --color-accent-primary: #0062f9;
  --color-accent-primary-hover: #0053cb;
  --color-accent-primary-active: #0041a4;
  --card-background-color: #ffffff;
  --card-box-shadow:
    0 0.25px 0.75px rgba(0, 0, 0, 0.05),
    0 2px 6px rgba(0, 0, 0, 0.1);
  --background-color-canvas: #ffffff;
  --border-color: #bfbfc9;
  --border-color-deemphasized: #bac2ca;
  --border-color-interactive: #8f8f9d;
  --input-text-background-color: #ffffff;
  --input-text-color: #000000;
  --button-background-color: #eeeeef;
  --button-background-color-hover: #dededf;
  --button-background-color-active: #cdcdcf;
  --button-background-color-destructive: #cf1748;
  --button-background-color-destructive-hover: #b20037;
  --button-background-color-destructive-active: #90002b;
  --text-color: #15141a;
  --text-color-error: #b20037;
  --button-text-color-primary: #ffffff;
  --button-text-color-destructive: #ffffff;
  --focus-outline: 2px solid #0062f9;
  --icon-color-warning: #b16a00;
}

@media (prefers-color-scheme: dark) {
  :root {
    --black: 251, 251, 254;
    --white: 28, 27, 34;
    --accent: 0, 202, 219;
    --passive-grey: 35, 34, 43;
    --active-grey: 91, 91, 102;
    --search-highlight: 0, 49, 126;

    /* Acorn Tokens */
    --color-accent-primary: #00cadb;
    --color-accent-primary-hover: #62dce9;
    --color-accent-primary-active: #a6ecf4;
    --card-background-color: #23222b;
    --card-box-shadow:
      0 0.25px 0.75px rgba(0, 0, 0, 0.2),
      0 2px 6px rgba(0, 0, 0, 0.4);
    --background-color-canvas: #1c1b22;
    --border-color: #5b5b66;
    --border-color-deemphasized: #5b5b66;
    --border-color-interactive: #bfbfc9;
    --input-text-background-color: #2b2a33;
    --input-text-color: #fbfbfe;
    --button-background-color: #2c2b31;
    --button-background-color-hover: #3b3a41;
    --button-background-color-active: #4b4a50;
    --button-background-color-destructive: #ff7e8e;
    --button-background-color-destructive-hover: #ffa0aa;
    --button-background-color-destructive-active: #ffc3c9;
    --text-color: #fbfbfe;
    --text-color-error: #ffa0aa;
    --button-text-color-primary: #15141a;
    --button-text-color-destructive: #15141a;
    --focus-outline: 2px solid #00cadb;
    --icon-color-warning: #f5cc58;
  }
}

::backdrop {
  background-color: #00000080;
}

html {
  font-size: 14px;
  overflow-y: scroll;
  scrollbar-color: rgb(var(--active-grey)) rgb(var(--white));
}

html, body, main {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  width: 375px;
  min-width: 100%;
  max-width: 100%;
}

body {
  min-height: 100vh;

  background-color: rgb(var(--white));
  color: rgb(var(--black));
  font: inherit;
  -webkit-user-select: none;
  user-select: none;
}

main {
  flex-grow: 1;
  flex-shrink: 0;
}

#permissions-banner,
#embedded-banner {
  width: 375px;
  min-width: 100%;
  max-width: 100%;
  padding: 8px 4px;
  border-bottom: 1px solid rgb(var(--active-grey));

  text-align: center;
}

#grant-host-permission {
  display: block;
  padding: 0.5ch 1ch;
  border-radius: 0.5ch;
  margin: 8px auto 0;

  font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
}

#grant-host-permission:focus {
  outline: 2px solid rgb(var(--accent));
}

#permissions-banner:not([hidden]) + #embedded-banner {
  display: none;
}

[role="tablist"] {
  display: flex;
  flex-direction: row;
  column-gap: 8px;
  flex: 0;
  padding: 8px;
  border-bottom: 1px solid var(--border-color);

  background-color: var(--background-color-canvas);
}

[role="tablist"] [role="tab"] {
  min-height: 32px;
  min-width: 79px;
  flex-grow: 1;
  flex-shrink: 0;
  padding: 3.75px 15px;
  border: 1px solid transparent;
  border-radius: 8px;
  margin: 0;

  background-color: transparent;
  color: inherit;
  font-size: 15px;
  font-weight: 600;
  text-decoration: none;
}

[role="tablist"] [role="tab"]:hover {
  background-color: var(--button-background-color-hover);
}

[role="tablist"] [role="tab"]:hover:active,
[role="tablist"] [role="tab"][aria-selected="true"] {
  background-color: var(--button-background-color-active);
}

[role="tablist"] [role="tab"]:focus-visible {
  outline: var(--focus-outline);
  outline-offset: 2px;
}

[role="tabpanel"] {
  position: relative;
  flex-grow: 1;
  flex-shrink: 0;
}

[role="tabpanel"]:focus-visible {
  outline-offset: -3px;
}

[role="tabpanel"]:focus-visible::after {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;

  content: "";
  outline: inherit;
  outline-offset: inherit;
  pointer-events: none;
}

input[type="text"],
select {
  padding: 4px;
  border: none;
  border-radius: 3px;

  background-color: rgb(var(--passive-grey));
  color: rgb(var(--black));
}

::placeholder {
  color: inherit;
  opacity: 0.55;
}

input[type="text"] {
  padding-left: 8px;
  padding-right: 8px;
}

input[type="text"]:focus,
select:focus {
  background-color: rgb(var(--active-grey));
}

dialog {
  border: none;
  border-radius: 8px;
  padding: 16px;

  background-color: var(--card-background-color);
  box-shadow: var(--card-box-shadow);
  color: var(--text-color);
  font-size: 15px;
}

fieldset {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  column-gap: 8px;
  padding: 0;
  border: none;
  margin: 0;
}

button[type] {
  display: inline-block;
  min-height: 32px;
  border: 1px solid transparent;
  border-radius: 8px;
  padding: 4px 16px;

  background-color: var(--button-background-color);
  color: var(--text-color);
  font-size: 15px;
  font-weight: 600;
}

button[type]:disabled {
  opacity: 50%;
}

button[type]:enabled:hover {
  background-color: var(--button-background-color-hover);
}

button[type]:enabled:hover:active {
  background-color: var(--button-background-color-active);
}

button[type]:focus-visible {
  outline: var(--focus-outline);
  outline-offset: 2px;
}

button[type].primary {
  background-color: var(--color-accent-primary);
  color: var(--button-text-color-primary);
}

button[type].primary:enabled:hover {
  background-color: var(--color-accent-primary-hover);
}

button[type].primary:enabled:hover:active {
  background-color: var(--color-accent-primary-active);
}

button[type].destructive {
  background-color: var(--button-background-color-destructive);
  color: var(--button-text-color-destructive);
}

button[type].destructive:enabled:hover {
  background-color: var(--button-background-color-destructive-hover);
}

button[type].destructive:enabled:hover:active {
  background-color: var(--button-background-color-destructive-active);
}

h1, h2 {
  margin: 0;
}

h1 {
  font-size: 1.467em;
  font-weight: 600;
}

h2 {
  font-size: 1.133em;
  font-weight: 600;
}

h4 {
  margin-block: 8px;
}

textarea {
  min-height: 32px;
  width: 100%;
  padding: 7.5px 11.25px;
  border: 1px solid var(--border-color-interactive);
  border-radius: 8px;
  margin-top: 3.75px;

  background-color: var(--input-text-background-color);
  color: var(--input-text-color);
  overflow: auto;
  scrollbar-color: var(--border-color-deemphasized) transparent;
  scrollbar-width: thin;
  white-space: pre;
}

textarea:focus-visible {
  outline: var(--focus-outline);
}

ul {
  padding-inline-start: 16px;
  padding-inline-end: 0;
}

.acorn-icons {
  display: inline-flex;
  vertical-align: bottom;
  margin: 0;
}

.acorn-icons svg {
  height: 1.15em;
  width: 1.15em;
}

.clr-picker {
  width: 210px;
}

